<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/embedded_checkbox_category">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="parent_checkbox_group2"
            android:summary="@string/parent_checkbox_summary"
            android:title="@string/parent_checkbox_title"/>
        <EditTextPreference
            android:defaultValue="default value"
            android:dependency="parent_checkbox_group2"
            android:key="child_edittext_group2"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/edit_text_preference_summary"
            android:title="@string/edit_text_preference_title"/>
    </PreferenceCategory>
</PreferenceScreen>